objects/nitro__Nitro_EA_User_Criteria__c.object
<CustomObject>
    <fields>
        <fullName>nitro__Nitro_EverydayActivity__c</fullName>
        <label>Nitro EverydayActivity</label>
        <referenceTo>nitro__Nitro_EverydayActivity__c</referenceTo>
        <relationshipLabel>Nitro EA User Criteria</relationshipLabel>
        <relationshipName>Nitro_EA_User_Criteria</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>nitro__comparator__c</fullName>
        <label>comparator</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__compare_to_value__c</fullName>
        <label>compare to value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__field_name__c</fullName>
        <label>field name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__field_type__c</fullName>
        <label>field type</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Nitro EA User Criteria</label>
    <nameField>
        <label>Nitro EA User Criteria Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nitro EA User Criteria</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>